# AML-project-2023

./: .gitignore  Project.ipynb  Project_new_step4.ipynb  README.md  fssfsdc.ipynb  fssfsdc_elia.ipynb  fssfsdc_mazzi.ipynb  fssfsdc_old.ipynb  om-het-part.py  pyproject.toml  run.py  step4.ipynb
config/: baseline.txt  trasformers.txt
data/Cityscapes/: heterogeneuosA.json  heterogeneuosB.json  test_A.txt  test_B.txt  train_A.txt  train_B.txt  uniformA.json  uniformB.json
src/: run.py
src/bisenetV2/: bisenetv2.py
src/centr_setting/: main.py
src/centralized/: main.py  styleaugment.py
src/config/: baseline.py  config_options.py  config_transforms.py  federated.py  ffreda.py
src/dataset/: cityscapes.py
src/dataset_generation/: main.py
src/datasets/: GTA.py  cityscapes.py
src/fed_setting/: client.py  main.py  server.py
src/federated/: client.py  main.py  selftrainingloss.py  server.py
src/ffreda_setting/: main.py  styleaugment.py
src/networks/: deeplabv3.py  mobilenetv2.py
src/pseudo_labels/: main.py
src/utils/: setup.py  transform.py  utils.py  wandb_setup.py
