[tool.poetry]
name = "aml-project-2023"
version = "0.1.0"
description = ""
authors = ["lorenzo bellino <lor.bellino@gmail.com>"]
readme = "README.md"
packages = [{include = "aml_project_2023"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
