[tool.poetry]
name = "aml-project-2023"
version = "0.1.0"
description = ""
authors = ["lorenzo bellino <lor.bellino@gmail.com>"]
readme = "README.md"
packages = [{include = "aml_project_2023"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
torchvision = "^0.15.1"
wandb = "^0.14.0"
matplotlib = "^3.7.1"
torchmetrics = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
